--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.1"
+dagger-io = "^0.8.4"
+black = "^23.7.0"
 
 [build-system]
 requires = ["poetry-core"]
