ci: add vulture for check dead code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^7.4.1"
 dagger-io = "^0.8.4"
 black = "^23.7.0"
 bandit = "^1.7.5"
+vulture = "^2.9.1"
 
 [build-system]
 requires = ["poetry-core"]
