--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dagger-io = "^0.8.4"
 black = "^23.7.0"
 bandit = "^1.7.5"
 vulture = "^2.9.1"
+behave = "^1.2.6"
 
 [build-system]
 requires = ["poetry-core"]
