--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "autorg"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+unleashclient = "^5.8.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.scripts]
 
