--- a/.github/workflows/comit_stage.yml
+++ b/.github/workflows/comit_stage.yml
@@ -1,7 +1,10 @@
 ---
 name: Commit stage
 run-name: ${{github.actor}} esta probando el commit
-on: [push]
+on:
+    push:
+        paths-ignore: 
+            - 'docs/**'
     
 jobs:
   test:
