--- a/.github/workflows/comit_stage.yml
+++ b/.github/workflows/comit_stage.yml
@@ -3,9 +3,10 @@ name: Commit stage
 run-name: ${{github.actor}} esta probando el commit
 on:
     push:
-        paths-ignore: 
+        paths-ignore:
             - 'docs/**'
-    
+            - 'build/**'
+            - 'infra/**'
 jobs:
   test:
     runs-on: ubuntu-latest
