--- a/.github/workflows/comit_stage.yml
+++ b/.github/workflows/comit_stage.yml
@@ -27,5 +27,6 @@ jobs:
           poetry run python ci/commit_stage.py
 
       - name: Build the application
+        if: startsWith(github.ref, 'refs/tags')  
         run: |
           poetry run python ci/build_stage.py
