CI: skip pipeline for changes in some files
CI: The pipeline don't run if .gitignore or README.md contain changes

--- a/.github/workflows/comit_stage.yml
+++ b/.github/workflows/comit_stage.yml
@@ -7,6 +7,8 @@ on:
             - 'docs/**'
             - 'build/**'
             - 'infra/**'
+            - '.gitignore'
+            - 'README.md'
 jobs:
   test:
     runs-on: ubuntu-latest
