--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,7 @@ behave = "^1.2.6"
 testpaths = "tests"
 markers = [
   "unit",
-  "integration"
-]
+  "integration"]
 
 [build-system]
 requires = ["poetry-core"]
