fix: now cli work properly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^23.7.0"
 bandit = "^1.7.5"
 vulture = "^2.9.1"
 behave = "^1.2.6"
+mypy = "^1.5.1"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
