--- a/.github/workflows/comit_stage.yml
+++ b/.github/workflows/comit_stage.yml
@@ -14,7 +14,7 @@ on:
           branch:
             description: "revert on fail"
             required: true
-            default: 'revert_branch'
+            default: 'main'
 jobs:
   test:
     runs-on: ubuntu-latest
